# ridge-trace

./: .gitignore  README.md  pyproject.toml
notebooks/: demo01-curvature.ipynb  design00.ipynb
notebooks/.ipynb_checkpoints/: design00-checkpoint.ipynb
src/ridge_trace/: __init__.py  curvature.py  trace.py
test/: conftest.py  test_curvature.py  test_trace.py
