[project]
name = "ridge-trace"
version = "0.1.0"
description = "Trace arc ridges in 2D images"
authors = [
    { name = "William Henney", email = "will@henney.org" }
]
dependencies = [
    "astropy>=6.0.0",
    "numpy>=1.26.4",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "ridge_trace:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "pytest>=8.0.1",
    "pytest-cov>=4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ridge_trace"]

[tool.pytest.ini_options]
addopts = "-rA"
testpaths = [
    "test",
    "notebooks",
]
